--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -20,7 +20,6 @@ nav.nav {
 
   @media screen and (min-width: 500px) {
     margin: 0 auto;
-    width: 90%;
   }
 
   // Shows nav at 768px
