--- a/pages/gallery/Carousel.module.scss
+++ b/pages/gallery/Carousel.module.scss
@@ -16,7 +16,7 @@
 
   & img {
     opacity: 0;
-    transition: opacity 0.3s;
+    transition: opacity 0.3s !important;
   }
 }
 
